sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:11: error: value setValue is not a member of Unit
possible cause: maybe a semicolon is missing before `value setValue'?
    	}setValue(i-j,v)
         ^