sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var l=getValueCount()
  var v=0
  for (i <- 1 to l-1){
    v=getValue(i)
  	for (j <- 1 to i){
    	if(getValue(i-j)>v){
    		copy(i-j,i-j+1)
        
    	}setValue(i-j,v)
    }
   }
}